src/test/ui/const-generics/infer/uninferred-consts.full.stderr
error[E0282]: type annotations needed
  --> $DIR/uninferred-consts.rs:14:9
   |
LL |     Foo.foo();
   |         ^^^
   |
   = note: cannot infer the value of the const parameter `N`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
